# BrainGB

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
brainnet_construction/: adjust_bvecs.m  instruction.docx  reg_FSROI_Jan2014.sh
brainnet_construction/NIfTI_20140122/: pad_nii.m  reslice_nii.m  rri_orient.m  save_untouch_header_only.m  view_nii.m
dataset_construction/: compute_matrix_Dec_11_2015.m  construct_network.py  ecc_bvecs.m  myerode.m  run_dtk.sh
examples/: build_model.py  example_main.py  get_transform.py  modified_args.py  nni_test.py  train_and_evaluate.py
examples/nni_configs/: config.yaml  search_space.json
examples/utils/: simple_param.py
examples/utils/get_abide/: 01-fetch_data.py  02-process_data.py  03-generate_abide_dataset.py  preprocess_data.py  readme.md  subject_IDs.txt
src/dataset/: __init__.py  brain_data.py  brain_dataset.py  maskable_list.py  transforms.py  utils.py
src/dataset/abcd/: load_abcd.py
src/models/: __init__.py  brainnn.py  gat.py  gcn.py  losses.py  mlp.py  pna.py
src/utils/: __init__.py  bin_edges.py  get_y.py  mixup.py
