[metadata]
name = brain-gb
version = 0.0.1
author = Emory Brain Network
author_email = wdai26@emory.edu
description = Emory Brain Benchmark package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
project_urls =
    Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
BrainNet = ReportLab>=1.2; RXP

[options.packages.find]
where = src
